# Turbine-q4-prereq-task

airdrop/: .gitignore  airdrop.ts  enroll.ts  keygen.ts  package-lock.json  package.json  transfer.ts
airdrop/programs/: Turbin3_prereq.ts
rust-task/: Cargo.toml
rust-task/src/: lib.rs
rust-task/src/programs/: Turbin3_prereq.rs
