[package]
name = "rust-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.1"
solana-sdk = "1.15.2"
solana-client = "1.15.2"
solana-program = "1.15.2"
borsh = "0.10.3"
anchor-lang = "0.30.1"
